# list-fonts-json

./: .gitignore  CMakeLists.txt  README.md
src/: FontManagerLinux.cc  FontManagerMac.mm  FontManagerWindows.cc  FontQuery.cc  FontQuery.h  main.cc
